# ReGenerator

./: .gitignore  DESCRIPTION  LICENSE  NAMESPACE  README.md  requirements.txt
.github/workflows/: main.yml
C_samples/: CMakeLists.txt  README.md  main.c  multiple_in_out_params_sample.c  multiple_in_out_params_sample.h  no_params_sample.c  no_params_sample.h  one_in_one_out_param_sample.c  one_in_one_out_param_sample.h  only_in_params_sample.c  only_in_params_sample.h  only_out_params_sample.c  only_out_params_sample.h  tables_params_sample.c  tables_params_sample.h
Rscripts/: roxygen.R  test.R
scripts/: ctype_translator.py  expressions.py  header_parser.py  prepare.py
